mock market data consumer with redis pub/sub

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret=${JWT_SECRET}
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+# spring.data.redis.password=redis
+spring.data.redis.timeout=200
+spring.data.redis.lettuce.pool.max-active=64
+spring.data.redis.lettuce.pool.max-idle=16
+spring.data.redis.lettuce.pool.min-idle=4
