Updating DB every 1min with stock data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=stock-fantasy-league
+
+# DB/POSTGRES
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
@@ -10,10 +12,14 @@ spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret=${JWT_SECRET}
 
+# REDIS
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-# spring.data.redis.password=redis
 spring.data.redis.timeout=200
 spring.data.redis.lettuce.pool.max-active=64
 spring.data.redis.lettuce.pool.max-idle=16
 spring.data.redis.lettuce.pool.min-idle=4
+
+# FLYWAY
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
